# travel-plan

./: .dockerignore  .env.example  .gitignore  ABOUT_ME.md  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-k3s.yml  tests.yml
apps/image-enrichment-service/: README.md
apps/itinerary-service/: README.md
apps/query-service/: README.md
apps/reranker-service/: README.md
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package.json
apps/web/migrations/: 0001_web_user_events.sql
apps/web/openapi/: itinerary.openapi.json  query.openapi.json
apps/web/scripts/: migrate.ts  shoot-one.ts  shoot.ts
apps/web/src/: instrumentation.ts  proxy.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  template.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/sign-in/: page.tsx
apps/web/src/app/(auth)/sign-up/: page.tsx
apps/web/src/app/api/metrics/: route.ts
apps/web/src/app/api/palette/: route.ts
apps/web/src/app/browse/: browse-rail.tsx  error.tsx  loading.tsx  page.tsx
apps/web/src/app/foryou/: page.tsx
apps/web/src/app/history/: actions.ts  clear-button.tsx  page.tsx
apps/web/src/app/listing/: actions.ts
apps/web/src/app/listing/[id]/: page.tsx
apps/web/src/app/observatory/: page.tsx
apps/web/src/app/plan/: actions.ts  page.tsx  plan-console.tsx
apps/web/src/app/profile/: actions.ts  page.tsx  profile-console.tsx
apps/web/src/app/search/: error.tsx  loading.tsx  page.tsx
apps/web/src/components/: aurora.tsx  auth-form.tsx  command-palette.tsx  compass.tsx  constellation-art.tsx  filter-rail.tsx  footer.tsx  insight-panels.tsx  itinerary-view.tsx  listing-card.tsx  listing-image.tsx  marquee.tsx  nav.tsx  page-header.tsx  record-view.tsx  reveal.tsx  search-bar.tsx  sign-out-button.tsx  star-rating.tsx  starfield.tsx
apps/web/src/lib/: attributes.ts  auth.ts  browse.ts  constellation.ts  database-url.ts  db.ts  env.ts  events.ts  format.ts  itinerary-parse.ts  metrics.ts  personas.ts  session.ts
apps/web/src/lib/api/: errors.ts
apps/web/src/lib/api/itinerary/: client.ts  schema.d.ts
apps/web/src/lib/api/query/: client.ts  schema.d.ts
apps/web/tests/: attributes.test.ts  browse.test.ts  constellation.test.ts  errors.test.ts  itinerary-parse.test.ts  metrics.test.ts  preload.ts  search-flow.test.ts
docs/: eval-split.md
docs/handoff/: phase-1.md  phase-10.md  phase-2.md  phase-3.md  phase-4.5.md  phase-4.7.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
docs/plans/: retrieval-engine-dev-plan.md
infra/docker/: Dockerfile  Dockerfile.reranker  compose.external.yml  compose.local.yml  compose.yml
infra/grafana/dashboards/: meridian-web.json  retrieval-engine.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/kubernetes/examples/: corpus-sample.yaml
infra/kubernetes/helm/retrieval-engine/: Chart.yaml  values-external.yaml  values-k3s.yaml  values-local.yaml  values.yaml
infra/kubernetes/helm/retrieval-engine/crds/: corpus.yaml
infra/kubernetes/helm/retrieval-engine/files/: collector-config.yaml
infra/kubernetes/helm/retrieval-engine/templates/: NOTES.txt  _helpers.tpl  bootstrap-job.yaml  configmap-env.yaml  corpus-operator.yaml  grafana.yaml  hpa.yaml  image-enrichment-worker.yaml  ingestion-worker.yaml  ingress.yaml  itinerary-service.yaml  jaeger.yaml  keda-scaledobjects.yaml  otel-collector.yaml  postgres.yaml  prometheus.yaml  query-service.yaml  redis.yaml  reranker-service.yaml  secret.yaml  web.yaml
infra/kubernetes/k3s/: traefik-config.yaml
infra/kubernetes/scripts/: deploy-k3s.sh  deploy-minikube.ps1  deploy-minikube.sh  load-env.ps1  load-env.sh
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
results/: baseline.json  tradeoff-phase4.json
scripts/: export_openapi.py
src/retrieval_engine/: config.py  db_url.py  env_normalize.py  main.py  metrics.py  redis_url.py  telemetry.py
src/retrieval_engine/api/: cache.py  listings.py  schemas.py  search.py
src/retrieval_engine/db/: models.py  session.py
src/retrieval_engine/eval/: beir_runner.py  cli.py  implicit_runner.py  metrics.py  query_strategies.py  tradeoff.py
src/retrieval_engine/image_enrichment/: eligibility.py  enqueue.py  jobs.py  main.py  persistence.py  worker.py
src/retrieval_engine/ingestion/: cli.py  enqueue.py  jobs.py  parsers.py  pipeline.py  split.py  worker.py
src/retrieval_engine/itinerary_service/: main.py
src/retrieval_engine/operator/: __init__.py  crd.py  main.py  reconcile.py
src/retrieval_engine/personalization/: __init__.py  category_affinity.py  features.py  rerank.py  store.py  types.py
src/retrieval_engine/query_understanding/: __init__.py  constraints.py  expand.py  hyde.py  llm.py  pipeline.py  rewrite.py  types.py
src/retrieval_engine/reranker_service/: main.py  onnx_reranker.py
src/retrieval_engine/resilience/: __init__.py  breaker.py
src/retrieval_engine/retrieval/: cli.py  dense.py  embeddings.py  filters.py  fusion.py  hybrid.py  rerank.py  sparse.py
tests/: conftest.py  test_split.py  test_url_normalization.py
tests/api/: test_listings.py
tests/eval/: test_metrics.py  test_query_strategies.py  test_tradeoff.py
tests/image_enrichment/: test_jobs.py
tests/ingestion/: test_jobs.py
tests/itinerary/: test_itinerary.py
tests/load/: search.js
tests/operator/: test_reconcile.py
tests/personalization/: test_blend.py  test_category_affinity.py  test_features.py  test_store.py
tests/query_understanding/: test_pipeline.py
tests/resilience/: test_breaker.py
tests/retrieval/: test_embeddings.py  test_rerank.py  test_rrf.py  test_sparse.py
