[project]
name = "retrieval-engine"
version = "0.1.0"
description = "Personalized listing search & ranking engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "redis>=5.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[dependency-groups]
# Query-time embedding (fastembed; ONNX runtime from gpu group locally, cpu in containers)
embed = [
    "fastembed>=0.5.0",
]
# Cross-encoder reranker service (ONNX + HF tokenizer). CPU onnxruntime is
# declared here for containers; Windows dev gets the CUDA build from `gpu`.
reranker = [
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "onnxruntime>=1.19.0 ; sys_platform != 'win32'",
]
# LLM query understanding + itinerary (lazy-imported when provider=google)
llm = [
    "google-generativeai>=0.8.0",
]
# Local Windows CUDA dev only — not used in container images
gpu = [
    "onnxruntime-gpu>=1.19.0",
    "nvidia-cudnn-cu12>=9.0.0",
]
# Offline eval CLI only (pulls torch via beir → sentence-transformers)
eval = [
    "beir>=2.0.0",
]
# Corpus CRD operator (kubernetes client; optional stretch)
operator = [
    "kubernetes>=31.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
ingest = "retrieval_engine.ingestion.cli:main"
embed = "retrieval_engine.retrieval.cli:main"
index-fts = "retrieval_engine.retrieval.sparse:main"
eval = "retrieval_engine.eval.cli:main"
serve = "retrieval_engine.main:serve"
serve-reranker = "retrieval_engine.reranker_service.main:serve"
serve-itinerary = "retrieval_engine.itinerary_service.main:serve"
serve-worker = "retrieval_engine.ingestion.worker:main"
enqueue-job = "retrieval_engine.ingestion.enqueue:main"
serve-corpus-operator = "retrieval_engine.operator.main:serve"
serve-image-enrichment-worker = "retrieval_engine.image_enrichment.main:serve"
serve-image-enrichment-worker-cli = "retrieval_engine.image_enrichment.worker:main"
enqueue-image-job = "retrieval_engine.image_enrichment.enqueue:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrieval_engine"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# CUDA 12 build — matches typical Windows CUDA toolkit installs (12.6/12.8).
# PyPI onnxruntime-gpu defaults to CUDA 13 and will fail with cublasLt64_13.dll missing.
[[tool.uv.index]]
name = "onnxruntime-cuda-12"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
explicit = true

[tool.uv.sources]
onnxruntime-gpu = { index = "onnxruntime-cuda-12" }

# fastembed embed group pulls cpu onnxruntime which shadows onnxruntime-gpu (fastembed #608).
# Block the cpu wheel on Windows only (use --group gpu for local CUDA dev);
# Linux containers are cpu-only and need the regular onnxruntime wheel.
[tool.uv]
override-dependencies = ["onnxruntime>=1.19.0 ; sys_platform != 'win32'"]
